Minor text coloring updates, language changes, fix wrapping

--- a/default.css
+++ b/default.css
@@ -5,7 +5,7 @@ body
 
 #terminal
 {
-  position: absolute;
+  position: relative;
   height: 100%;
   width: 100%;
 
@@ -18,7 +18,8 @@ body
   padding-left: 10px;
   padding-right: 10px;
 
-  overflow: auto;
+  overflow-y: scroll;
+  overflow-x: hidden;
 }
 
 #terminal a
@@ -47,4 +48,8 @@ body
 #input br, #pastInput br
 {
   display: none;
+}
+
+* {
+  word-wrap: break-word;
 }
